--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Charlie Kim's web developer portfolio website">
+	<meta name="description" content="Yashwanth M's portfolio website">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -32,9 +32,9 @@
 				</ul>
 
 				<ul class="navbar-socials">
-					<li><a href="mailto:cwkim3@gmail.com"><i class="fas fa-envelope"></i></a></li>
-					<li><a href="https://github.com/iamcharliekim" target="_blank"><i class="fab fa-github"></i></a></li>		
-					<li><a href="https://www.linkedin.com/in/charleswkim/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+					<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
+					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>		
+					<li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -51,9 +51,9 @@
 		<div class="contact">Contact</div>
 		<div class="socials">
 			<ul class="socials-ul">
-				<li><a href="mailto:cwkim3@gmail.com"><i class="fas fa-envelope"></i></a></li>
-				<li><a href="https://github.com/iamcharliekim" target="_blank"><i class="fab fa-github"></i></a></li>		
-				<li><a href="https://www.linkedin.com/in/charleswkim/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+				<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
+				<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>		
+				<li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 			</ul>
 		</div>
 	</div>
@@ -65,18 +65,18 @@
 	</main>
 	
 	<footer>
-		<span class="copyright">© 2019 Charlie Kim</span>
+		<span class="copyright">© 2019 Yashwanth M</span>
 		<ul class="footer-links">
 			<li>
-				<a href="mailto:cwkim3@gmail.com"><i class="fas fa-envelope"></i></a>
+				<a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a>
 			</li>
 
 			<li>
-				<a href="https://github.com/iamcharliekim" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a>
 			</li>		
 
 			<li>
-				<a href="https://www.linkedin.com/in/charleswkim/" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a>
 			</li>
 
 
