--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<title>Yashwanth M</title>
+	<!-- add icon link -->
+        <link rel = "icon" href =  
+"https://upload.wikimedia.org/wikipedia/commons/d/d5/Hey_Machine_Learning_Logo.png" 
+        type = "image/x-icon"> 
 </head>
 <body>
 <!-- NAVBAR -->
