--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<navbar role="banner">
 		<div class="inner-nav">
 			<header>
-				<h1><div class="home-icon">CK</a></h1>
+				<h1><div class="home-icon">YM</a></h1>
 			</header>
 
 			<div class="hamburger dropdown-menu">
