--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
 				<ul class="navbar-socials">
 					<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
-					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>		
-					<li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100011686931983"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/yash__0330/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 				</ul>
 			</div>
 		</div>
@@ -56,8 +58,10 @@
 		<div class="socials">
 			<ul class="socials-ul">
 				<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
-				<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>		
-				<li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100011686931983"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/yash__0330/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 			</ul>
 		</div>
 	</div>
@@ -71,17 +75,11 @@
 	<footer>
 		<span class="copyright">© 2019 Yashwanth M</span>
 		<ul class="footer-links">
-			<li>
-				<a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a>
-			</li>
-
-			<li>
-				<a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a>
-			</li>		
-
-			<li>
-				<a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a>
-			</li>
+			<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100011686931983"><i class="fab fa-facebook-square"></i></a></li>
+					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/yash__0330/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 
 
 		</ul>
