--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         <link rel = "icon" href =  
 "https://upload.wikimedia.org/wikipedia/commons/d/d5/Hey_Machine_Learning_Logo.png" 
         type = "image/x-icon"> 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163797220-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  
+  gtag('config', 'UA-163797220-1');
+</script>
+
 </head>
 <body>
 <!-- NAVBAR -->
