--- a/index.html
+++ b/index.html
@@ -42,16 +42,11 @@
 					<li><div class="nav-home">Home</a></li>
 					<li><div class="nav-about">About</a></li>
 					<li><div class="nav-projects">Projects</a></li>
+					<li><div class="nav-articles">Articles</a></li>
 					<li><div class="nav-contact">Contact</a></li>
 				</ul>
 
-				<ul class="navbar-socials">
-					<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=100011686931983"><i class="fab fa-facebook-square"></i></a></li>
-					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a href="https://www.instagram.com/yash__0330/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-				</ul>
+
 			</div>
 		</div>
 	</navbar>
@@ -64,16 +59,8 @@
 		<div class="menu-home">Home</div>
 		<div class="about">About</div>
 		<div class="projects">Projects</div>
+		<div class="articles">Articles</div>
 		<div class="contact">Contact</div>
-		<div class="socials">
-			<ul class="socials-ul">
-				<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=100011686931983"><i class="fab fa-facebook-square"></i></a></li>
-					<li><a href="https://github.com/Yash0330" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a href="https://www.instagram.com/yash__0330/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-			</ul>
-		</div>
 	</div>
 
 <!-- LANDING PAGE -->
@@ -83,7 +70,7 @@
 	</main>
 	
 	<footer>
-		<span class="copyright">© 2019 Yashwanth M</span>
+		<span class="copyright">© 2021 Yashwanth M</span>
 		<ul class="footer-links">
 			<li><a href="mailto:yashwanthm0330@gmail.com"><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://www.linkedin.com/in/yashwanth-m-982934169/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
